--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,7 @@
+@media {
+  .normal {width: 95%;}
+}
+
 @font-face {
   font-family: "et-book";
   src: url("et-book/roman-line-figures.ttf") format("truetype");
